--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "grunt-contrib-less": "0.11.1",
     "grunt-contrib-coffee": "~0.10.1",
     "sails-mysql": "^0.10.6",
-    "sails-mongo": "^0.10.4"
+    "sails-mongo": "^0.10.4",
+    "sails-postgresql": "^0.10.9"
   },
   "scripts": {
     "start": "node app.js",
