--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "grunt-contrib-coffee": "~0.10.1",
     "sails-mysql": "^0.10.6",
     "sails-mongo": "^0.10.4",
-    "sails-postgresql": "^0.10.9"
+    "sails-postgresql": "^0.10.9",
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0"
   },
   "scripts": {
     "start": "node app.js",
