--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "sails-mongo": "^0.10.4",
     "sails-postgresql": "^0.10.9",
     "passport": "~0.2.1",
-    "passport-local": "~1.0.0"
+    "passport-local": "~1.0.0",
+    "express": "^4.9.5",
+    "express-helpers": "^1.3.1"
   },
   "scripts": {
     "start": "node app.js",
