--- a/client_spa_src/bower.json
+++ b/client_spa_src/bower.json
@@ -28,6 +28,7 @@
     "angular-dialog-service": "~5.2.1",
     "angular-sanitize": "~1.2.26",
     "angular-translate": "~2.4.1",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "angular-local-storage": "~0.1.3"
   }
 }
