--- a/client_spa_src/bower.json
+++ b/client_spa_src/bower.json
@@ -29,6 +29,7 @@
     "angular-sanitize": "~1.2.26",
     "angular-translate": "~2.4.1",
     "lodash": "~2.4.1",
-    "angular-local-storage": "~0.1.3"
+    "angular-local-storage": "~0.1.3",
+    "angular-bootstrap-colorpicker": "https://github.com/GorNovosti/angular-bootstrap-colorpicker.git#~3.0.8"
   }
 }
