--- a/client_spa_src/bower.json
+++ b/client_spa_src/bower.json
@@ -31,6 +31,7 @@
     "lodash": "~2.4.1",
     "angular-local-storage": "~0.1.3",
     "angular-bootstrap-colorpicker": "https://github.com/GorNovosti/angular-bootstrap-colorpicker.git#~3.0.8",
-    "d3": "~3.4.13"
+    "d3": "~3.4.13",
+    "angular-sails-bind": "~1.0.5"
   }
 }
